--- a/BugTracker/BugTracker.csproj
+++ b/BugTracker/BugTracker.csproj
@@ -22,12 +22,13 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
+        <PackageReference Include="Serilog" Version="2.10.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+        <PackageReference Include="Serilog.Enrichers.Context" Version="4.2.0" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+        <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
+        <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="DTOs" />
-        <Folder Include="Utils" />
     </ItemGroup>
 
 </Project>
